[project]
name = "toon-tokens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "tiktoken>=0.12.0",
    "toon-format @ git+https://github.com/toon-format/toon-python.git",
    "uvicorn>=0.38.0",
]
